feat: similar_images result log, FileTimeFixer --help, fix VS Code tasks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,5 +70,6 @@
         "text_encoding": "cpp",
         "thread": "cpp",
         "variant": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "E:/repos/FileTimeFixer/cpp"
 }
