--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "type": "cppbuild",
+            "type": "shell",
             "label": "Build Active File with g++",
             "command": "/usr/bin/g++",
             "args": [
@@ -70,7 +70,7 @@
             "detail": "Run the generated executable"
         },
         {
-            "type": "cppbuild",
+            "type": "shell",
             "label": "C/C++: g++.exe build active file",
             "command": "D:/msys64/ucrt64/bin/g++.exe",
             "args": [
